--- a/PBL3_qnv.csproj
+++ b/PBL3_qnv.csproj
@@ -164,7 +164,7 @@
     <Compile Include="GUI_CCH\fDoanhThu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI_CCH\fDoanhThu.Designer.cs">
+    <Compile Include="GUI_CCH\fDoanhThu.designer.cs">
       <DependentUpon>fDoanhThu.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI_CCH\Main_2.cs">
