--- a/PBL3_qnv.csproj
+++ b/PBL3_qnv.csproj
@@ -277,6 +277,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\SecurityContext.cs" />
     <EmbeddedResource Include="GUI_CCH\fDoanhThu.resx">
       <DependentUpon>fDoanhThu.cs</DependentUpon>
     </EmbeddedResource>
