--- a/PBL3_qnv.csproj
+++ b/PBL3_qnv.csproj
@@ -206,6 +206,12 @@
     <Compile Include="GUI_CCH\Shift_CCH.Designer.cs">
       <DependentUpon>Shift_CCH.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI_CCH\TKNV.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI_CCH\TKNV.designer.cs">
+      <DependentUpon>TKNV.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI_NV\CircularButton.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -277,6 +283,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Security\SecurityContext.cs" />
     <EmbeddedResource Include="GUI_CCH\fDoanhThu.resx">
       <DependentUpon>fDoanhThu.cs</DependentUpon>
@@ -301,6 +312,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI_CCH\Shift_CCH.resx">
       <DependentUpon>Shift_CCH.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI_CCH\TKNV.resx">
+      <DependentUpon>TKNV.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI_NV\ReBox.resx">
       <DependentUpon>ReBox.cs</DependentUpon>
@@ -336,6 +350,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EntityDeploy Include="DAL\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
@@ -372,6 +387,7 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\eye_flaticon.png" />
     <None Include="Resources\bear.png" />
     <None Include="Resources\wellcome.png" />
     <None Include="Resources\anhnen.png" />
